fixing layout issue canvas

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -27,7 +27,7 @@ img {
 .forecast { min-width: 350px; }
 .surf-images { margin-left: -3px; }
 
-canvas { 
+canvas#tideChart { 
   border: 1px solid #d9d9d9;  
   height: 70px !important;
 }
